# proofs

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-lab.txt  requirements.txt  wrangler.jsonc
data/: attempts.jsonl  problem_repositories.json  problems.json  research_policy.json  reviews.json  source_registry.json  strategy_library.json  strategy_proposals.jsonl  validations.json
deploy/: proof-factory-capacity-guard.service  proof-factory-capacity-guard.timer  proof-factory-easy.service  proof-factory-easy.timer  proof-factory-hard.service  proof-factory-hard.timer  proof-factory-intake.service  proof-factory-intake.timer  proof-factory-lab.service  proof-factory-lab.timer  proof-factory-publish.path  proof-factory-publish.service  proof-factory-publish.timer  proof-factory-review-inbox.service  proof-factory-review-inbox.timer  proof-factory-runtime-sync.service  proof-factory-runtime-sync.timer  proof-factory-scout.service  proof-factory-scout.timer  proof-factory-strategy-lab.service  proof-factory-strategy-lab.timer  proof-factory-watchdog.service  proof-factory-watchdog.timer  proof-factory.env
docs/: ACADEMIC-CONTRIBUTIONS.md  ARCHITECTURE.md  COMPUTE-CAPACITY-PLAN.md  CONFIGURATION.md  PHASE6-SUCCESSOR-CANDIDATES-DRAFT.md  R55-OUTREACH-DRAFTS-2026-07-21.md  R55-SYSTEM-RESET-2026-07-21.md  REMEDIATION-2026-07-21.md  RESEARCH-DESIGN-GUIDELINES.md  RESEARCH-HARNESS.md  SIMULATION-LABS.md
proof_factory/: __init__.py  agent.py  brain.py  briefing.py  capacity.py  cli.py  config.py  contribution_gate.py  events.py  intake.py  (+21 more)
(+158 files in other folders)
